--- a/app/src/main/res/layout/content_search_settings.xml
+++ b/app/src/main/res/layout/content_search_settings.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright (c) 2018.
+  ~ Sergey Suzanskyi
+  -->
+
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -24,10 +29,10 @@
         android:id="@+id/switch_popular"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:checked="false"
         android:text="Популярность "
         app:layout_constraintBottom_toTopOf="@+id/switch_online"
@@ -74,8 +79,8 @@
 
     <ImageView
         android:id="@+id/Avatarka"
-        android:layout_width="141dp"
-        android:layout_height="109dp"
+        android:layout_width="218dp"
+        android:layout_height="187dp"
         android:layout_marginTop="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
