--- a/app/src/main/res/layout/app_bar_start.xml
+++ b/app/src/main/res/layout/app_bar_start.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright (c) 2018.
+  ~ Sergey Suzanskyi
+  -->
+
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Publicator">
+    tools:context=".Publication">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
