--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<!--
+  ~ Copyright (c) 2018.
+  ~ Sergey Suzanskyi
+  -->
+
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".Publicator"
+    tools:context=".Publication"
     tools:showIn="@layout/activity_start">
 
     <Button
@@ -100,7 +106,7 @@
             app:srcCompat="@android:drawable/gallery_thumb"
             tools:layout_editor_absoluteX="403dp"
             tools:layout_editor_absoluteY="527dp" />
-
     </LinearLayout>
+
 
 </android.support.constraint.ConstraintLayout>
