--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -9,7 +9,7 @@
     tools:openDrawer="start">
 
     <include
-        layout="@layout/content_main"
+        layout="@layout/new_content_main"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
