--- a/app/src/main/res/layout/app_bar_start.xml
+++ b/app/src/main/res/layout/app_bar_start.xml
@@ -26,6 +26,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main" />
+    <include layout="@layout/new_content_main" />
 
 </android.support.design.widget.CoordinatorLayout>
